# Basic-Term-Pricing-Model-Rust-lifelibBasicTermSM

./: .gitignore  Cargo.toml  README.md  basic_term_sample.xlsx  sm_term.ipynb  term.ipynb
.ipynb_checkpoints/: term-checkpoint.ipynb
notebooks/: sm_term_demo.ipynb
spreadsheets/: basic_term_sample.ods
src/: assumptions.rs  main.rs  model_points.rs  mp.rs  prem_rate.rs  projection.rs  queries.rs
src/.ipynb_checkpoints/: term-checkpoint.rs
src/assumptions/: acq_exp.csv  assumptions.ods  inflation.csv  lapse.csv  load.csv  mort.csv  mtn_exp.csv  qrates.xlsx  spot_rate.csv
