[package]
name = "act"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.1" }
polars = { version = "0.49.1", features = ["describe", "lazy", "ndarray"] }
plotters = { version = "0.3.5", features = ["evcxr", "all_series", "all_elements"] }
ndarray-rand = { version = "0.15.0" }
